--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "ZURB <foundation@zurb.com>",
   "license": "MIT",
   "dependencies": {
+    "aos": "^2.2.0",
     "foundation-sites": "~6.4.1",
     "jquery": ">=3.0.0",
-    "what-input": "^4.1.3",
-    "motion-ui": "~1.2.2"
+    "motion-ui": "~1.2.2",
+    "underscore": "^1.8.3",
+    "what-input": "^4.1.3"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
